# learnopengl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
assets/: light_shader.fs  light_shader.vs  light_source.fs  shader.fs  shader.vs
include/glad/: glad.h
src/: CMakeLists.txt  Camera.h  Makefile  Shader.cpp  Shader.h  Texture.h  cmake_install.cmake  glad.c  main.cpp
